  + The "first day" parameter of a repeating timer is now only reset if cTimer::Matches()
    is called with t==0 and Margin==0 and it has been exceeded.
  + Access to the cached cTimer::start-/stopTime members is now protected via a mutex.
  + Plugins that use cTimer should continue to work as before. However, the author should
    react accordingly to compile time and log messages regarding these modifications.
    To test whether the plugin code will compile once the deprecated functions are
    removed in a future version, the macro DEPRECATED_TIMER_MATCHES can be set to 0 in
    timers.h.
  APIVERSNUM is now 30009.
- Fixed the stop time of repeating timers in case of DST change (thanks to Markus Ehrnsperger).
- Fixed expiring VPS timers in case the event has not yet startet after its announced end time.
- Reverted the change in cCondWait::SleepMs() because of a possible lockup (reported by Johann
  Friedrichs).
- Added cTimer::VpsTime() (suggested by Markus Ehrnsperger).
- Now sending the SVDRP discover broadcast once per minute, to re-establish lost connections.
- If an SVDRP peer connection is lost, the connection in the opposite direction is now also
  closed (reported by Markus Ehrnsperger).
- Shutdown now takes into account the VPS margin (reported by Christoph Haubrich).
- Fixed an 'invalid lock sequence' when deleting the timeshift timer.
- Added DeviceFreeze() when pausing at the last mark (reported by Andreas Baierl).

2025-12-02:

- Fixed a memory leak in cMark::Parse() (thanks to Fabian Wolter).
- Revised the German language texts (thanks to Stefan Hofmann).
- The SVDRP command NEWT now returns code 550 if a timer with the same channel, day, start
  and stop time already exists (reported by Robert Hannebauer).
- cVector::Remove() can now remove more than one elements (also fixed an off-by-one error in
  the call to memmove()).
  APIVERSNUM is now 30010.
- Now using cTimeMs in cThread::Cancel() to make sure the given timeout is handled correctly.