@@ -10176,7 +10176,7 @@ Video Disk Recorder Revision History
 - Fixed an 'invalid lock sequence' when deleting the timeshift timer.
 - Added DeviceFreeze() when pausing at the last mark (reported by Andreas Baierl).
 
-2025-12-02:
+2025-12-03:
 
 - Fixed a memory leak in cMark::Parse() (thanks to Fabian Wolter).
 - Revised the German language texts (thanks to Stefan Hofmann).
@@ -10186,3 +10186,5 @@ Video Disk Recorder Revision History
   the call to memmove()).
   APIVERSNUM is now 30010.
 - Now using cTimeMs in cThread::Cancel() to make sure the given timeout is handled correctly.
+- cTimeMs::Elapsed() now always returns the time since the last call to Set(); introduced
+  cTimeMs::Remaining() and cTimeMs::Reset().
